# wayclip

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
bindings/: bemenu.h
resources/: config.toml  wayclip.service
src/: main.rs
src/clipboard/: mod.rs
src/communication/: mod.rs
src/config/: cli.rs  consts.rs  data.rs  error.rs  file.rs  install.rs  mod.rs  resources.rs
src/input/: mod.rs
src/menu/: bemenu.rs  mod.rs
src/wayland/: mod.rs
