[package]
name = "wayclip"
version = "0.1.0"
authors = ["Joey Eamigh"]
edition = "2021"
rust-version = "1.71"
description = "An opinionated Wayland clipboard manager"
documentation = "https://github.com/JoeyEamigh/wayclip"
repository = "https://github.com/JoeyEamigh/wayclip.git"
license = "MIT"
keywords = ["wayland", "clipboard", "manager"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.7", features = ["derive"] }
cocoon = "0.3.2"
dirs = "5.0.1"
evdev = { version = "0.12.1", features = ["paste"] }
figment = { version = "0.10.8", features = ["toml"] }
infer = "0.13.0"
interprocess = "1.2.1"
machine-uid = "0.3.0"
os_pipe = "1.1.4"
pkg-config = "0.3.27"
quote = "1.0.27"
rand = "0.8.5"
rust-embed = { version = "6.6.1", features = ["compression"] }
serde = { version = "1.0.162", features = ["derive"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
wayland-client = "0.30.1"
wayland-protocols = { version = "0.30.0", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
wl-clipboard-rs = "0.7.0"

[build-dependencies]
bindgen = "0.65.1"

[features]
default = ["bemenu"]
bemenu = []
