[package]
name = "wayclip"
version = "0.4.1"
authors = ["Joey Eamigh"]
edition = "2021"
rust-version = "1.75"
description = "An opinionated Wayland clipboard manager"
repository = "https://github.com/JoeyEamigh/wayclip.git"
documentation = "https://github.com/JoeyEamigh/wayclip"
homepage = "https://github.com/JoeyEamigh/wayclip"
keywords = ["wayland", "clipboard", "manager"]
readme = "README.md"
license = "MIT"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.7", features = ["derive"] }
cocoon = "0.3.2"
dirs = "5.0.1"
evdev = { version = "0.12.1", features = ["paste"] }
figment = { version = "0.10.8", features = ["toml"] }
infer = "0.15.0"
interprocess = "1.2.1"
itertools = "0.11.0"
machine-uid = "0.5.1"
os_pipe = "1.1.4"
quote = "1.0.27"
rand = "0.8.5"
rust-embed = { version = "8.0.0", features = ["compression"] }
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.0", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
wl-clipboard-rs = "0.7.0"

[build-dependencies]
bindgen = "0.68.1"

[features]
default = ["bemenu"]
bemenu = []
