[package]
name = "wayclip"
version = "0.4.1"
authors = ["Joey Eamigh"]
edition = "2021"
rust-version = "1.75"
description = "An opinionated Wayland clipboard manager"
repository = "https://github.com/JoeyEamigh/wayclip.git"
documentation = "https://github.com/JoeyEamigh/wayclip"
homepage = "https://github.com/JoeyEamigh/wayclip"
keywords = ["wayland", "clipboard", "manager"]
readme = "README.md"
license = "MIT"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.7", features = ["derive"] }
cocoon = "0.3.3"
dirs = "5.0.1"
evdev = { version = "0.12.2", features = ["paste"] }
figment = { version = "0.10.19", features = ["toml"] }
infer = "0.15.0"
interprocess = "1.2.1"
itertools = "0.11.0"
machine-uid = "0.5.1"
os_pipe = "1.2.0"
quote = "1.0.36"
rand = "0.8.5"
rust-embed = { version = "8.4.0", features = ["compression"] }
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wayland-client = "0.31.3"
wayland-protocols = { version = "0.32.9", features = [
  "client",
  "staging",
  "unstable",
] }
wl-clipboard-rs = "0.9.2"
libc = "0.2"

[build-dependencies]
bindgen = "0.68.1"

[features]
default = ["bemenu"]
bemenu = []
